syntax = "proto3";

message RsmCommand {
  uint64 data = 1;
}

message RsmResult {
  repeated uint64 log_entries = 1;
}
